<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:text="@string/location_title"
                        android:layout_marginLeft="20dp"
                        android:textSize="15dp"
                        android:textColor="#000000"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/message"
                        android:layout_width="match_parent"
                        android:text="@string/location_message"
                        android:textSize="12dp"
                        android:textColor="#000000"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/use_gps_layout"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:background="@drawable/location_icon"
                        android:layout_height="25dp" />

                    <TextView
                        android:id="@+id/suggetion"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/location_hint"
                        android:textSize="12dp"
                        android:textColor="#000000"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:textColor="#000000"
                        android:layout_height="1dp">

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_height="35dp">


                        <LinearLayout
                            android:id="@+id/negative_button"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/negative_txt"
                                android:layout_width="match_parent"
                                android:text="@string/location_exit"
                                android:gravity="center"
                                android:textColor="#000000"
                                android:layout_height="match_parent" />



                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="1dp"
                            android:textColor="#000000"
                            android:layout_height="match_parent">


                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/positive_button"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/positive_txt"
                                android:layout_width="match_parent"
                                android:text="@string/location_allow"
                                android:gravity="center"
                                android:textColor="#000000"
                                android:layout_height="match_parent" />




                        </LinearLayout>



                    </LinearLayout>


                </LinearLayout>



            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</LinearLayout>